Version 2.1.3 released June 12, 2024

    - Implement nbdkit "block_size" callback
    - Added configure flag "--enable-nbd" (issue #223)
    - Fix spurious "cache file is truncated" error (issue #222)
    - Fix bugs in dcache.c when USE_FALLOCATE enabled (issue #224)

Version 2.1.2 released April 23, 2024

    - Automatically recreate nbdkit socket's directory if missing (issue #219)
    - Recalculate date and authorization on retry (issue #214)

Version 2.1.1 released October 23, 2023

    - Fixed bug with bulk delete HTTP requests (issue #211)
    - Fixed empty payload bug when retrying an upload (issue #212)
    - Check for errors returned by curl_easy_setopt()
    - Added --noCurlCache flag to facilitate debugging
    - Bump wait time for nbdkit to start from 1s to 5s

Version 2.1.0 released September 23, 2023

    - Avoid sending an empty Accept-Encoding header (issue #208)
    - Use fallocate(FALLOC_FL_PUNCH_HOLE) for empty disk cache blocks (issue #200)
    - Made sync(1) work on s3backer file to flush cached data (issue #197)
    - Fixed bug where s3b_compress=deflate NDB flag would fail (issue #195)
    - Fixed bug in zero cache "current_cache_size" stats value (issue #204)
    - Reuse cURL handles after normal HTTP error codes (issue #199)
    - Run modprobe(8) if needed when starting with the --nbd flag (issue #203)
    - Use newer OpenSSL 3.0 API functions when available

Version 2.0.2 released July 17, 2022

    - Fixed bugs with the --nbd flag when not also using -f flag (issue #188)
    - Fixed free() of invalid pointer bug in zero_cache.c (issue #191)
    - Added support for zstd compression (pr #187)

Version 2.0.1 released June 4, 2022

    - Fix null pointer dereference bug in zero cache.

Version 2.0.0 released June 4, 2022

    - Support running as a Network Block Device (NBD) server (issue #178)
    - Fix slow write performance with large block sizes since 1.6.0 (issue ##185)